--- a/package.json
+++ b/package.json
@@ -10,7 +10,17 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/core": "^7.1.2",
+        "@babel/plugin-proposal-class-properties": "^7.1.0",
+        "@babel/preset-env": "^7.1.0",
+        "@babel/preset-es2016": "^7.0.0-beta.53",
         "@babel/preset-react": "^7.0.0",
+        "@babel/preset-stage-0": "^7.0.0",
+        "@babel/register": "^7.0.0",
+        "babel-cli": "^6.26.0",
+        "babel-loader": "^8.0.1",
+        "babel-minify-webpack-plugin": "^0.2.0",
+        "babel-plugin-transform-class-properties": "^6.24.1",
         "@fortawesome/fontawesome-free": "^5.11.1",
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
