--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/core": "^7.1.2",
+        "@babel/core": "^7.8.3",
         "@babel/plugin-proposal-class-properties": "^7.1.0",
-        "@babel/preset-env": "^7.1.0",
+        "@babel/preset-env": "^7.8.3",
         "@babel/preset-es2016": "^7.0.0-beta.53",
         "@babel/preset-react": "^7.0.0",
         "@babel/preset-stage-0": "^7.0.0",
         "@babel/register": "^7.0.0",
+        "@fortawesome/fontawesome-free": "^5.11.1",
+        "axios": "^0.19.2",
         "babel-cli": "^6.26.0",
         "babel-loader": "^8.0.1",
         "babel-minify-webpack-plugin": "^0.2.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
-        "@fortawesome/fontawesome-free": "^5.11.1",
-        "axios": "^0.19",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -32,7 +32,13 @@
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "resolve-url-loader": "2.3.1",
-        "sass": "^1.20.1",
+        "sass": "^1.25.0",
         "sass-loader": "7.*"
+    },
+    "dependencies": {
+        "@tinymce/tinymce-react": "^3.3.2",
+        "ace-builds": "^1.4.8",
+        "codemirror": "^5.51.0",
+        "react-ace": "^8.0.0"
     }
 }
